chore: suppress default format warnings

--- a/.editorconfig
+++ b/.editorconfig
@@ -456,3 +456,6 @@ dotnet_diagnostic.RCS1161.severity = none
 dotnet_diagnostic.RCS1165.severity = none
 # Allow keyword-based names so that parameter names like `@event` can be used.
 dotnet_diagnostic.CA1716.severity = none
+
+# IDE0055: Fix formatting, use csharpier instead
+dotnet_diagnostic.IDE0055.severity = none
