--- a/Shellguard.csproj
+++ b/Shellguard.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Godot.NET.Sdk">
+<Project Sdk="Godot.NET.Sdk/4.3.0">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-    <RootNamespace>Adventure</RootNamespace>
+    <RootNamespace>Shellguard</RootNamespace>
     <!-- Required for some nuget packages to work -->
     <!-- godotengine/godot/issues/42271#issuecomment-751423827 -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -15,9 +15,9 @@
     -->
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
-    <Title>Adventure</Title>
+    <Title>Shellguard</Title>
     <Version>1.0.0</Version>
-    <Description>Adventure</Description>
+    <Description>Shellguard</Description>
     <Copyright>© 2024 Andreas Nilsson</Copyright>
     <Authors>Andreas Nilsson</Authors>
     <Company>Andreas Nilsson</Company>
@@ -41,6 +41,18 @@
     <PackageReference Include="LightMoq" Version="0.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <!-- Production dependencies go here! -->
+    <PackageReference Include="System.IO.Abstractions" Version="21.1.7" />
+    <PackageReference Include="EnvironmentAbstractions" Version="5.0.0" />
+    <PackageReference Include="GodotSharp.SourceGenerators" Version="2.1.1" PrivateAssets="all" OutputItemType="analyzer" />
+    <PackageReference Include="Chickensoft.SaveFileBuilder" Version="1.1.0" />
+    <PackageReference Include="Chickensoft.AutoInject" Version="2.4.0" PrivateAssets="all" />
+    <PackageReference Include="Chickensoft.Collections" Version="1.12.3" />
+    <PackageReference Include="Chickensoft.GodotNodeInterfaces" Version="2.2.31" />
+    <PackageReference Include="Chickensoft.Introspection" Version="2.0.0" />
+    <PackageReference Include="Chickensoft.Introspection.Generator" Version="2.0.0" PrivateAssets="all" OutputItemType="analyzer" />
+    <PackageReference Include="Chickensoft.Serialization" Version="2.0.0" />
+    <PackageReference Include="Chickensoft.Serialization.Godot" Version="0.6.1" />
+    <PackageReference Include="Chickensoft.LogicBlocks" Version="5.13.0" />
+    <PackageReference Include="Chickensoft.LogicBlocks.DiagramGenerator" Version="5.13.0" PrivateAssets="all" OutputItemType="analyzer" />
   </ItemGroup>
 </Project>
