--- a/Shellguard.csproj
+++ b/Shellguard.csproj
@@ -1,9 +1,27 @@
 <Project Sdk="Godot.NET.Sdk/4.3.0">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'android' ">net7.0</TargetFramework>
-    <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'ios' ">net8.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
+        <!-- Required for some nuget packages to work -->
+    <!-- godotengine/godot/issues/42271#issuecomment-751423827 -->
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <!-- To show generated files -->
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <CompilerGeneratedFilesOutputPath>.generated</CompilerGeneratedFilesOutputPath>
+    <DebugType>portable</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <Title>Shellguard</Title>
+    <Version>1.0.0</Version>
+    <Description>Shellguard</Description>
+    <Copyright>© 2024 Andreas Nilsson</Copyright>
+    <Authors>Andreas Nilsson</Authors>
+    <!-- Don't include unit tests in release builds. -->
+    <DefaultItemExcludes Condition="'$(Configuration)' == 'ExportRelease'">
+      $(DefaultItemExcludes);test/**/*
+    </DefaultItemExcludes>
+    <!-- <PublishAot>true</PublishAot> -->
+    <ReportAnalyzer>true</ReportAnalyzer>
+    <CodeAnalysisRuleSet>CodeAnalyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <!-- Test dependencies go here! -->
@@ -18,6 +36,10 @@
   </ItemGroup>
   <ItemGroup>
     <!-- Production dependencies go here! -->
+    <PackageReference Include="System.IO.Abstractions" Version="21.1.7" />
+    <PackageReference Include="EnvironmentAbstractions" Version="5.0.0" />
+    <PackageReference Include="GodotSharp.SourceGenerators" Version="2.1.1" PrivateAssets="all"
+      OutputItemType="analyzer" />
     <PackageReference Include="Chickensoft.SaveFileBuilder" Version="1.1.0" />
     <PackageReference Include="Chickensoft.AutoInject" Version="2.4.0" PrivateAssets="all" />
     <PackageReference Include="Chickensoft.Collections" Version="1.12.3" />
