--- a/Shellguard.csproj
+++ b/Shellguard.csproj
@@ -23,12 +23,13 @@
     <PackageReference Include="Chickensoft.Collections" Version="1.12.3" />
     <PackageReference Include="Chickensoft.GodotNodeInterfaces" Version="2.2.31" />
     <PackageReference Include="Chickensoft.Introspection" Version="2.0.0" />
-    <PackageReference Include="Chickensoft.Introspection.Generator" Version="2.0.0"
-      PrivateAssets="all" OutputItemType="analyzer" />
+    <PackageReference Include="Chickensoft.Introspection.Generator" Version="2.0.0" PrivateAssets="all" OutputItemType="analyzer" />
     <PackageReference Include="Chickensoft.Serialization" Version="2.0.0" />
     <PackageReference Include="Chickensoft.Serialization.Godot" Version="0.6.1" />
     <PackageReference Include="Chickensoft.LogicBlocks" Version="5.13.0" />
-    <PackageReference Include="Chickensoft.LogicBlocks.DiagramGenerator" Version="5.13.0"
-      PrivateAssets="all" OutputItemType="analyzer" />
+    <PackageReference Include="Chickensoft.LogicBlocks.DiagramGenerator" Version="5.13.0" PrivateAssets="all" OutputItemType="analyzer" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="src\weapon\" />
   </ItemGroup>
 </Project>
