--- a/Shellguard.csproj
+++ b/Shellguard.csproj
@@ -38,8 +38,7 @@
     <!-- Production dependencies go here! -->
     <PackageReference Include="System.IO.Abstractions" Version="21.1.7" />
     <PackageReference Include="EnvironmentAbstractions" Version="5.0.0" />
-    <PackageReference Include="GodotSharp.SourceGenerators" Version="2.1.1" PrivateAssets="all"
-      OutputItemType="analyzer" />
+    <PackageReference Include="GodotSharp.SourceGenerators" Version="2.1.1" PrivateAssets="all" OutputItemType="analyzer" />
     <PackageReference Include="Chickensoft.SaveFileBuilder" Version="1.1.0" />
     <PackageReference Include="Chickensoft.AutoInject" Version="2.4.0" PrivateAssets="all" />
     <PackageReference Include="Chickensoft.Collections" Version="1.12.3" />
@@ -52,6 +51,7 @@
     <PackageReference Include="Chickensoft.LogicBlocks.DiagramGenerator" Version="5.13.0" PrivateAssets="all" OutputItemType="analyzer" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="src\stats\state\" />
     <Folder Include="src\weapon\" />
   </ItemGroup>
 </Project>
