--- a/Shellguard.csproj
+++ b/Shellguard.csproj
@@ -52,6 +52,7 @@
     <PackageReference Include="Chickensoft.LogicBlocks.DiagramGenerator" Version="5.13.0" PrivateAssets="all" OutputItemType="analyzer" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="src\app\state\states\" />
     <Folder Include="src\stats\state\" />
     <Folder Include="src\weapon\" />
   </ItemGroup>
