--- a/.github/workflows/visual_tests.yaml
+++ b/.github/workflows/visual_tests.yaml
@@ -33,7 +33,7 @@ jobs:
         with:
           # If using git-lfs (large file storage), this ensures that your files
           # are checked out properly.
-          lfs: true
+          # lfs: true
           # Make sure any git submodules are checked out as well.
           submodules: 'recursive'
           # allow for private submodules
